complete admin retail show room

--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -10,5 +10,8 @@
         <a class="sidebar-menuItem" href="/Admin/Contact">
             Contact management
         </a>
+        <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
+            Retail Show Room management
+        </a>
     </nav>
 </div>
