--- a/eProject/Areas/Admin/Views/Employee/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Employee/Index.cshtml
@@ -95,10 +95,22 @@
                                 <i class="fa-solid fa-location-dot"></i>
                                 @employee.Address
                             </p>
-                            <p class="personItem-line">
-                                <i class="fa-solid fa-clipboard-user"></i>
-                                @employee.Department
-                            </p>
+                            <div class="row">
+                                <div class="col-xl-6">
+                                    <p class="personItem-line">
+                                        <i class="fa-solid fa-clipboard-user"></i>
+                                        @employee.Department
+                                    </p>
+                                </div>
+                                <div class="col-xl-6">
+                                    @if (employee.Role == eProject.Auth.AuthManager.EmployeeRoles.AdminRole)
+                                    {
+                                        <p class="personItem-adminLine">
+                                            Admin
+                                        </p>
+                                    }
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-2">
