--- a/eProject/Content/Css/AdminCss/Employee/Index.css
+++ b/eProject/Content/Css/AdminCss/Employee/Index.css
@@ -10,7 +10,7 @@
 .topNav-btnItem, .searchForm-btn {
     display: inline-block;
     color: #333;
-    background-color: var(--bgcl-btn);
+    background-color: var(--primary);
     font-size: 1.6rem;
     padding: 12px 16px;
     border-radius: 6px;
@@ -149,6 +149,18 @@
     color: var(--grey);
     margin-top: 8px;
     margin-bottom: 0;
+}
+
+.personItem-adminLine {
+    border: 1px solid #007fff;
+    border-radius: 2px;
+    padding: 2px 6px;
+    color: #007fff;
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin-top: 8px;
+    margin-bottom: 0;
+    display: inline-block;
 }
 
 .personItem-name {
