--- a/eProject/Content/Css/AdminCss/Service/Index.css
+++ b/eProject/Content/Css/AdminCss/Service/Index.css
@@ -10,7 +10,7 @@
 .topNav-btnItem, .searchForm-btn {
     display: inline-block;
     color: #333;
-    background-color: var(--bgcl-btn);
+    background-color: var(--primary);
     font-size: 1.6rem;
     padding: 12px 16px;
     border-radius: 6px;
