Complete payment plan, payment plan detail, call charge type, call charge but except for delete function

--- a/eProject/Areas/Admin/Views/Service/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Service/Index.cshtml
@@ -64,7 +64,7 @@
                             <a class="serviceItem-action" href="/Admin/Service/Edit?serviceID=@service.ServiceID">
                                 Edit
                             </a>
-                            <a class="serviceItem-action dlt" id="deleteServiceBtn" href="/Admin/Service/Delete?serviceID=@service.ServiceID">
+                            <a class="serviceItem-action dlt" id="deleteServiceBtn" href="#">
                                 Delete
                             </a>
                         </div>
