--- a/eProject/Views/RetailStores/Index.cshtml
+++ b/eProject/Views/RetailStores/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     <h2 class="page-heading">
         <i class="fa-solid fa-shop"></i>
-        Retails Stores
+        Retail Show Room
     </h2>
     <div class="content-section">
         <div class="row">
