--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -15,11 +15,21 @@
                 Employee management
             </a>
         }
-        <a class="sidebar-menuItem" href="/Admin/Contact">
-            Contact management
-        </a>
         <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
             Retail Show Room management
         </a>
+        <a class="sidebar-menuItem" href="/Admin/Equipment">
+            Equipment management
+        </a>
+        <a class="sidebar-menuItem" href="/Admin/Warehouse">
+            Warehouse management
+        </a>
+        <a class="sidebar-menuItem" href="/Admin/Contact">
+            Contact management
+        </a>
+        <a class="sidebar-menuItem" href="/Admin/Supplier">
+           Supplier management
+        </a>
+
     </nav>
 </div>
