--- a/eProject/Areas/Admin/Views/Service/Add.cshtml
+++ b/eProject/Areas/Admin/Views/Service/Add.cshtml
@@ -36,7 +36,7 @@
     @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(service => service.ServiceName, new { @class = "form-label" })
-        @Html.EditorFor(service => service.ServiceName, new { htmlAttributes = new { @class = "form-input", placeHolder = "Enter name" } })
+        @Html.EditorFor(service => service.ServiceName, new { htmlAttributes = new { @class = "form-input", placeHolder = "Enter service name" } })
         @Html.ValidationMessageFor(service => service.ServiceName, null, new { @class = "invalidMessage" })
     </div>
     <div class="form-group">
