--- a/eProject/Areas/Admin/Views/Service/Edit.cshtml
+++ b/eProject/Areas/Admin/Views/Service/Edit.cshtml
@@ -37,7 +37,7 @@
     @Html.HiddenFor(service => service.ServiceID)
     <div class="form-group">
         @Html.LabelFor(service => service.ServiceName, new { @class = "form-label" })
-        @Html.EditorFor(service => service.ServiceName, new { htmlAttributes = new { @class = "form-input", placeHolder = "Enter name" } })
+        @Html.EditorFor(service => service.ServiceName, new { htmlAttributes = new { @class = "form-input", placeHolder = "Enter service name" } })
         @Html.ValidationMessageFor(service => service.ServiceName, null, new { @class = "invalidMessage" })
     </div>
     <div class="form-group">
