--- a/eProject/Content/Css/AdminCss/RetailShowRoom/AddRetailStore.css
+++ b/eProject/Content/Css/AdminCss/RetailShowRoom/AddRetailStore.css
@@ -100,3 +100,26 @@
     padding: 12px 0;
     border-bottom: 1px solid #555;
 }
+
+.topNav-btnItem {
+    display: inline-block;
+    color: #333;
+    background-color: #00ffff;
+    font-size: 1.6rem;
+    padding: 12px 16px;
+    border-radius: 6px;
+    text-decoration: none;
+}
+
+.topNav-btnItem i {
+    color: #333;
+}
+
+.topNav-btnItem:not(:first-child) {
+    margin-left: 60%;
+}
+
+.topNav-btnItem:hover {
+    color: #333;
+    opacity: .8;
+}
