--- a/eProject/Areas/Admin/Views/Supplier/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Supplier/Index.cshtml
@@ -58,10 +58,9 @@
                         </p>
                         <p class="personItem-line">
                             <i class="fa fa-link" aria-hidden="true"></i>
-                            <a href="@supplierList.ContactUrl">
+                            <a target="_blank" href="@supplierList.ContactUrl">
                                 @supplierList.ContactUrl
                             </a>
-                                
                         </p>
                     </div>
                     <div class="col-xl-9">
