--- a/eProject/Areas/Admin/Views/Equipment/Edit.cshtml
+++ b/eProject/Areas/Admin/Views/Equipment/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model eProject.Models.Equipment
+﻿@model eProject.Models.ViewModels.Equipment.EquipmentViewModel
 
 @section Styles{
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Equipment/Edit.css" />
@@ -34,7 +34,7 @@
                 
                 <div class="form-group">
                     @Html.LabelFor(equipment => equipment.SupplierID, new { @class = "form-label" })
-                    @Html.EditorFor(equipment => equipment.SupplierID, new { htmlAttributes = new { @class = "form-input", placeHolder = "Enter supplier id" } })
+                    @Html.DropDownListFor(equipment => equipment.SupplierID, Model.SupplierList, new { @class = "form-input", placeHolder = "Enter supplier id" })
                     @Html.ValidationMessageFor(equipment => equipment.SupplierID, null, new { @class = "invalidMessage" })
                 </div>
                 
